force-app/main/default/objects/NPN_Key_Contact__c/NPN_Key_Contact__c.object-meta.xml
<CustomObject>
    <description>NPN : DocuSign : Automated onboarding - Key Contacts form</description>
    <label>NPN Key Contact</label>
    <nameField>
        <label>NPN Key Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN Key Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>