force-app/main/default/objects/NPN_Key_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPN Key Contacts</relationshipLabel>
    <relationshipName>NPN_Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>