force-app/main/default/objects/NPN_Key_Contact__c/fields/AccountOrLead_ID__c.field-meta.xml
<CustomField>
    <fullName>AccountOrLead_ID__c</fullName>
    <label>AccountOrLead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>