force-app/main/default/objects/NPN_Key_Contact__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>NPN Key Contacts</relationshipLabel>
    <relationshipName>NPN_Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>