force-app/main/default/objects/NPN_Key_Contact__c/fields/Leads_and_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Leads_and_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leads and Opportunities</label>
    <type>Checkbox</type>
</CustomField>