force-app/main/default/objects/NPN_Key_Contact__c/fields/Sales_Training__c.field-meta.xml
<CustomField>
    <fullName>Sales_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Training</label>
    <type>Checkbox</type>
</CustomField>