force-app/main/default/objects/NPN_Key_Contact__c/fields/Technical_Training__c.field-meta.xml
<CustomField>
    <fullName>Technical_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical Training</label>
    <type>Checkbox</type>
</CustomField>