force-app/main/default/objects/NPN_Key_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Lead__c</columns>
    <columns>Leads_and_Opportunities__c</columns>
    <columns>Phone__c</columns>
    <columns>Job_Role__c</columns>
    <columns>Sales_Training__c</columns>
    <columns>Technical_Training__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>